indicates the contributor was also the author of the fix; Thanks!

* Verilator 3.814****

**   Support 'real' numbers and related functions.

***  Support 'const' variables in limited cases; similar to enums. [Alex Solomatnikov]

***  Support disable for loop escapes.

***  Support $fopen and I/O with integer instead of `verilator_file_descriptor.

**** Fix $display missing leading zeros in %0d, bug367.  [Alex Solomatnikov]

**** Use 'vluint64_t' for SystemC instead of (same sized) 'uint64' for MSVC++.

* Verilator 3.813 2011/06/28

***  Support bit vectors > 64 bits wide in DPI import and exports.

***  Fix out of memory on slice syntax error, bug354.  [Alex Solomatnikov]

**** Fix error on enum references to other packages, bug339. [Alex Solomatnikov]

**** Fix DPI undeclared svBitVecVal compile error, bug346. [Chandan Egbert]

**** Fix DPI bit vector compile errors, bug347, bug359. [Chandan Egbert]

**** Fix CDCRSTLOGIC report showing endpoint flops without resets.

**** Fix compiler warnings on SPARC, bug288. [Ahmed El-Mahmoudy]

* Verilator 3.812 2011/04/06

***  Add --trace-max-width and --trace-max-array, bug319.  [Alex Solomatnikov]

***  Add --Wno-fatal to turn off abort on warnings. [by Stefan Wallentowitz]

**** Support ${...} and $(...) env vars in .vc files.  [by Stefan Wallentowitz]

**** Support $bits(data_type), bug327.  [Alex Solomatnikov]

**** Support loop unrolling on width mismatches, bug333. [Joe Eiler]

**** Support simple cast operators, bug335.  [Alex Solomatnikov]

**** Accelerate bit-selected inversions.

**** Add error on circular parameter definitions, bug329. [Alex Solomatnikov]

**** Fix concatenates and vectored bufif1, bug326. [Iztok Jeras]

* Verilator 3.811 2011/02/14

**** Report errors on duplicated or empty pins, bug321.  [Christian Leber]

**** Report error on function call output tied to constant.  [Bernard Deadman]

**** Throw UNUSED/UNDRIVEN only once per net in a parametrized module.
